# graphn-sdk-python

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml  spec-sync.yml  test.yml
docs/: cold-starts.md
examples/: README.md  async_client.py  import_and_chat.py  import_from_s3.py  openai_compat.py  streaming.py
scripts/: e2e.py  regenerate.sh  smoke.py
src/graphn/: __init__.py  _client.py  _exceptions.py  _pagination.py  _transport.py  _version.py  imported_models.py  models.py  tts.py
src/graphn/_generated/: __init__.py
src/graphn/_generated/models/: __init__.py  architecture_info.py  capability.py  chat_completion_request.py  chat_completion_request_response_format.py  chat_completion_request_tool_choice_type_1.py  chat_completion_request_tools_item.py  chat_completion_response.py  chat_completion_response_choices_item.py  chat_completion_response_object.py  chat_completion_response_usage.py  chat_message.py  chat_message_role.py  chat_message_tool_calls_item.py  custom_model.py  custom_model_access.py  custom_model_artifact_type.py  custom_model_create.py  custom_model_create_quantization.py  custom_model_list.py  custom_model_quantization.py  custom_model_status.py  custom_model_update.py  discover_imported_models_request.py  discover_imported_models_response.py  discovered_imported_model.py  error.py  model.py  (+24 more)
src/graphn/chat/: __init__.py  completions.py
src/graphn/custom_models/: __init__.py  resource.py  types.py
src/graphn/secrets/: __init__.py  resource.py  types.py
tests/: conftest.py  test_chat_completions.py  test_client_config.py  test_custom_models.py  test_pagination.py  test_secrets.py
tests/fixtures/_meta/: README.md
tests/fixtures/chat/: chatCompletions.request.json  chatCompletions.response.200.json  chatCompletions.streaming.request.json  chatCompletions.streaming.txt  listModels.response.200.json
tests/fixtures/custom-models/: createCustomModel.request.json  createCustomModel.response.201.json  getCustomModel.response.200.json  getCustomModel.response.404.json  getSupportedArchitectures.response.200.json  listCustomModels.response.200.json  refreshCustomModel.response.200.json  validateCustomModel.request.json  validateCustomModel.response.200.json  validateCustomModel.response.422.json
tests/fixtures/imported-models/: listImportedModels.response.200.json  testImportedModel.request.json  testImportedModel.response.200.json
tests/fixtures/secrets/: createSecret.request.json  createSecret.response.201.json  listSecrets.response.200.json  updateSecret.request.json  updateSecret.response.200.json
tests/fixtures/tts/: createSpeech.request.json  listVoices.response.200.json
(+22 files in other folders)
